[package]
name = "pallet-nft-manager"
license = "GPL-3.0"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.20",  default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
] }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-avn-common = { default-features = false, path = "../../primitives/avn-common" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
pallet-avn = { default-features = false, path = "../avn" }

# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", optional = true }

# serde = { version = "1.0.195", default-features = false, optional = true }
[dev-dependencies]
parking_lot = { version = "0.12.0" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-avn-common = { features=["test-utils"], path = "../../primitives/avn-common" }

[features]
default = ['std']
std = [
    # "serde/std",
	"scale-info/std",
    "frame-benchmarking?/std",
    'codec/std',
    'sp-std/std',
    'sp-core/std',
    "sp-io/std",
    'sp-runtime/std',
    'sp-avn-common/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-avn/std',
    'log/std',
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
ethbridge-all-events = []
