[package]
name = "pallet-nft-manager"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log.workspace = true
codec.workspace = true
scale-info.workspace = true
hex-literal = { version = "0.4.1", default-features = false }
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-avn-common.workspace = true
sp-io.workspace = true
pallet-avn.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

# serde = { workspace = true, optional = true }
[dev-dependencies]
parking_lot = { version = "0.12.0" }
sp-keystore = { default-features = true, workspace = true }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
default = ['std']
std = [
    # "serde/std",
	"scale-info/std",
    "frame-benchmarking?/std",
    'codec/std',
    'sp-std/std',
    'sp-core/std',
    "sp-io/std",
    'sp-runtime/std',
    'sp-avn-common/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-avn/std',
    'log/std',
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
ethbridge-all-events = []
