[package]
name = "pallet-parachain-staking"
description = "parachain staking pallet for collator selection and reward distribution"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
log = { version = "0.4.20",  default-features = false }
serde = { version = "1.0.195", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"], default-features = false }
# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2", optional = true, default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }

scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
substrate-fixed = { version = "0.5.9", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2" }
pallet-session = { features = [
	"historical",
], git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }

pallet-avn = { default-features = false, path = "../avn" }
sp-avn-common = { default-features = false, path = "../../primitives/avn-common" }

[dev-dependencies]
similar-asserts = "1.1.0"

pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2",features=["insecure_zero_ed"] }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
pallet-avn-proxy = { default-features = false, path = "../avn-proxy" }
pallet-eth-bridge = { default-features = false, path = "../eth-bridge" }
parking_lot = { version = "0.12.0" }
assert_matches = "1.3.0"
sp-avn-common = { features=["test-utils"], path = "../../primitives/avn-common" }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
    "sp-io/std",
	"sp-core/std",
	"sp-staking/std",
	"sp-application-crypto/std",
	"sp-avn-common/std",
	"pallet-authorship/std",
	"pallet-avn/std",
	"pallet-session/std",
	"log/std",

]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
