[package]
name = "pallet-parachain-staking"
description = "parachain staking pallet for collator selection and reward distribution"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
serde = { workspace = true, optional = true }
rand = { version = "0.8.5", default-features = false }
hex.workspace = true
hex-literal = { version = "0.4.1", default-features = false }
codec = { workspace = true, features = ["derive"] }

# Substrate
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true

scale-info.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-application-crypto.workspace = true
sp-staking.workspace = true
substrate-fixed = { version = "0.5.9", default-features = false }
pallet-authorship.workspace = true
pallet-session = { workspace = true, features = ["historical"] }

pallet-avn.workspace = true
sp-avn-common.workspace = true

[dev-dependencies]
similar-asserts = "1.1.0"

pallet-balances = { workspace = true, default-features = true }
pallet-transaction-payment = { default-features = true, workspace = true }
pallet-timestamp.workspace = true
sp-keystore = { default-features = true, workspace = true }
pallet-avn-proxy = { default-features = false, workspace = true }
pallet-eth-bridge = { default-features = false, workspace = true }
parking_lot = { version = "0.12.0" }
assert_matches = "1.3.0"
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
    "sp-io/std",
	"sp-core/std",
	"sp-staking/std",
	"sp-application-crypto/std",
	"sp-avn-common/std",
	"pallet-authorship/std",
	"pallet-avn/std",
	"pallet-session/std",
	"log/std",
	"hex/std",
	"serde/std",
	"substrate-fixed/std",
	"rand/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
