[package]
name = "pallet-summary"
description = "Create summaries of historical transactions in the form of a merkle tree"
license = "GPL-3.0"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { version = "1.0.195", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.20",  default-features = false }

sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-avn-common = { default-features = false, path = "../../primitives/avn-common" }
sp-watchtower = { default-features = false, path = "../../primitives/watchtower" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
pallet-avn = { path = "../avn", default-features = false }
pallet-session = { default-features = false, features = [
	"historical",
], git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }

# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", optional = true }

[dev-dependencies]
node-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
parking_lot = { version = "0.12.0" }
pallet-session = { features = [
	"historical",
], git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
assert_matches = "1.3.0"
pallet-eth-bridge = { default-features = false, path = "../eth-bridge" }
sp-avn-common = { features=["test-utils"], path = "../../primitives/avn-common" }

[features]
migrate = []
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"serde/std",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-application-crypto/std",
	"sp-staking/std",
	"sp-avn-common/std",
	"sp-watchtower/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-avn/std",
	"pallet-session/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
