[package]
name = "pallet-summary"
description = "Create summaries of historical transactions in the form of a merkle tree"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
codec.workspace = true
hex.workspace = true
hex-literal.workspace = true
scale-info.workspace = true
log.workspace = true

sp-std.workspace = true
sp-runtime.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-staking.workspace = true
sp-application-crypto.workspace = true
sp-avn-common.workspace = true
sp-watchtower.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-avn.workspace = true
pallet-session = { workspace = true, features = ["historical"] }

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
parking_lot.workspace = true
pallet-timestamp.workspace = true
sp-state-machine = { default-features = true, workspace = true }
assert_matches = "1.3.0"
pallet-eth-bridge = { default-features = true, workspace = true }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
migrate = []
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"serde/std",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-application-crypto/std",
	"sp-staking/std",
	"sp-avn-common/std",
	"sp-watchtower/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-avn/std",
	"pallet-session/std",
	"hex/std",
	"log/std",
	"serde?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
