[package]
name = "pallet-token-manager"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
enumflags2 = { version = "0.7.4" }
hex-literal = { version = "0.4.1", default-features = false }
scale-info.workspace = true
log.workspace = true
sp-core.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
sp-io.workspace = true
sp-application-crypto.workspace = true
sp-avn-common.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-avn.workspace = true
pallet-timestamp.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features=["insecure_zero_ed"] }
pallet-transaction-payment = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
pallet-parachain-staking = { workspace = true, default-features = true }
pallet-session = { workspace = true, features = ["historical"] }
pallet-eth-bridge = { workspace = true, default-features = true }
pallet-scheduler.workspace = true
pallet-preimage.workspace = true
sp-state-machine = { default-features = true, workspace = true }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
    "sp-io/std",
    "sp-core/std",
	"sp-runtime/std",
	"sp-application-crypto/std",
	"sp-avn-common/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-avn/std",
	"pallet-timestamp/std",
	"log/std",
	"enumflags2/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
