[package]
name = "pallet-validators-manager"
description = "Manages the AvN validators"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
serde = { workspace = true, optional = true }
codec = { workspace = true, features = ["derive"] }
hex.workspace = true
scale-info.workspace = true
rand = { version = "0.8.5", features = ["std_rng"], default-features = false, optional = true }

sp-avn-common.workspace = true
pallet-avn.workspace = true

sp-std.workspace = true
sp-runtime.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-application-crypto.workspace = true
sp-staking.workspace = true

frame-support.workspace = true
frame-system.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
hex-literal = { version = "0.4.1", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false, features = [
	"hmac","static-context"
], optional = true }
sha3 = { version = "0.8", default-features = false, optional = true }
#Staking
pallet-parachain-staking.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
frame-election-provider-support = { default-features = true, workspace = true }
pallet-timestamp = { default-features = true, workspace = true }
parking_lot = { version = "0.12.0" }
pallet-balances = { workspace = true, features=["insecure_zero_ed"] }
sp-state-machine = { default-features = true, workspace = true }
pallet-avn-proxy = { workspace = true, default-features = true }
pallet-eth-bridge = { default-features = true, workspace = true }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
migrate = []
default = ["std", "pallet-session/historical"]
std = [
	"frame-benchmarking?/std",
	"serde?/std",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-application-crypto/std",
	"frame-support/std",
	"frame-system/std",
	"sp-avn-common/std",
	"sp-staking/std",
	"pallet-avn/std",
	"pallet-parachain-staking/std",
	"pallet-session/std",
	"libsecp256k1?/std",
	"hex/std",
	"log/std",
	"rand?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"rand",
	"libsecp256k1",
	"sha3",
]
try-runtime = ["frame-support/try-runtime"]
